블로그 글 수정

--- a/_posts/2020-12-17-ipad-air.md
+++ b/_posts/2020-12-17-ipad-air.md
@@ -2,6 +2,22 @@
 title: "오늘 아이패드 에어3을 질렀다!"
 excerpt: "열심히 필기하자"
 
+
+어제 친구랑 태블릿 pc에 대해 엄청 얘기하다가 갑자기 태블릿이 너무 사고싶어서 찾아보게되었다.
+
+자취방을 짐을 빼면서도 느꼈던게 디지털적으로 필기를 할 방도가 없어서 강의자료를 받으면
+그걸 인쇄해서 그 위에 필기를 해야했다. 하지만 나중에 다시 필기한 걸 볼려고 하니까 꼬질꼬질해져서 다시 보기 싫어졌다.
+
+깔끔하게 필기를 해서 나중에도 볼 수 있게 파일로 만들면 너무 좋을 것 같은 생각 + 태블릿 pc 이야기 --> 지름신ㅋㅋㅋ
+
+갤럭시 태블릿으로는  s7시리즈가 제일 좋지만 너무 비쌌고, 다른 버전들은 다 후기가 그저 그래서 
+그냥 당근마켓에 싸게 아이패드에어3+펜슬+케이스들 올라와있길래 내일 직거래하기로 했다!
+
+벌써 두근두근...! 빨리 받아서 필기해보고싶다!!!!
+
+
+
+
 categories:
   - 끄적끄적
 tags:
