--- a/_posts/2020-12-21-pj-plan.md
+++ b/_posts/2020-12-21-pj-plan.md
@@ -13,6 +13,6 @@ last_modified_at: 2020-12-20
 ---
 
 
-![](https://devinlife.com/assets/images/프로젝트계획-2.jpg)
-![](https://devinlife.com/assets/images/프로젝트계획-3.jpg)
-![](https://devinlife.com/assets/images/프로젝트계획-4.jpg)
+![](/assets/images/프로젝트계획-2.jpg)
+![](/assets/images/프로젝트계획-3.jpg)
+![](/assets/images/프로젝트계획-4.jpg)
