--- a/_posts/2020-12-24-pj-plan2.md
+++ b/_posts/2020-12-24-pj-plan2.md
@@ -1,15 +1,15 @@
 ---
 title: "추억정리 웹프로젝트 기획"
-exerpt:"추억 정리 웹 프로젝트 초기 기획안"
+excerpt: "추억 정리 웹프로젝트 초기 기획서"
 
 categories:
-  - 추억정리웹프로젝트
-  - 기획
-  - 프로젝트
+  - "추억정리웹프로젝트"
+  - "기획"
+  - "프로젝트"
 tags:
-  - 추억정리웹프로젝트
-  - 기획
-  - 프로젝트
+  - "추억정리웹프로젝트"
+  - "기획"
+  - "프로젝트"
 
 last_modified_at: 2020-12-24T08:06:00-05:00
 ---
